--- a/2048-DOS/2048-DOS.vcxproj
+++ b/2048-DOS/2048-DOS.vcxproj
@@ -78,6 +78,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="2048-DOS.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="2048.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
